--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,8 @@
         <version.db.postgresql>42.3.3</version.db.postgresql>
         <version.spring.content>1.2.7</version.spring.content>
         <version.amazon.awssdk>2.17.100</version.amazon.awssdk>
+        <version.hibernate.validator>7.0.4.Final</version.hibernate.validator>
+        <version.jakarta.el>4.0.1</version.jakarta.el>
 
         <!-- Flyway properties -->
         <flyway.locations>classpath:/db/migration/h2</flyway.locations>
@@ -236,77 +238,11 @@
                 <version>${version.lombok}</version>
             </dependency>
 
-<!--            &lt;!&ndash; Amazon AWS SDK &ndash;&gt;-->
-<!--            <dependency>-->
-<!--                <groupId>software.amazon.awssdk</groupId>-->
-<!--                <artifactId>s3</artifactId>-->
-<!--                <version>${version.amazon.awssdk}</version>-->
-<!--            </dependency>-->
-
-<!--            &lt;!&ndash; Spring Content Store: File System &ndash;&gt;-->
-<!--            <dependency>-->
-<!--                <groupId>com.github.paulcwarren</groupId>-->
-<!--                <artifactId>spring-content-fs-boot-starter</artifactId>-->
-<!--                <version>${version.spring.content}</version>-->
-<!--            </dependency>-->
-
-<!--            &lt;!&ndash; Spring Content Store: Amazon S3 &ndash;&gt;-->
-<!--            <dependency>-->
-<!--                <groupId>com.github.paulcwarren</groupId>-->
-<!--                <artifactId>content-s3-spring-boot-starter</artifactId>-->
-<!--                <version>${version.spring.content}</version>-->
-<!--            </dependency>-->
-
-<!--            <dependency>-->
-<!--                <groupId>com.github.paulcwarren</groupId>-->
-<!--                <artifactId>spring-content-s3</artifactId>-->
-<!--                <version>${version.spring.content}</version>-->
-<!--            </dependency>-->
-
             <dependency>
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-ui</artifactId>
                 <version>${version.springdoc.openapi}</version>
             </dependency>
-
-<!--            <dependency>-->
-<!--                <groupId>org.mapstruct</groupId>-->
-<!--                <artifactId>mapstruct</artifactId>-->
-<!--                <version>${version.mapstruct}</version>-->
-<!--            </dependency>-->
-
-<!--            <dependency>-->
-<!--                <groupId>org.projectlombok</groupId>-->
-<!--                <artifactId>lombok-mapstruct-binding</artifactId>-->
-<!--                <version>${version.lombok.mapstruct}</version>-->
-<!--            </dependency>-->
-
-<!--            <dependency>-->
-<!--                <groupId>org.testcontainers</groupId>-->
-<!--                <artifactId>testcontainers</artifactId>-->
-<!--                <version>${version.testcontainers}</version>-->
-<!--                <scope>test</scope>-->
-<!--            </dependency>-->
-
-<!--            <dependency>-->
-<!--                <groupId>org.testcontainers</groupId>-->
-<!--                <artifactId>junit-jupiter</artifactId>-->
-<!--                <version>${version.testcontainers}</version>-->
-<!--                <scope>test</scope>-->
-<!--            </dependency>-->
-
-<!--            <dependency>-->
-<!--                <groupId>org.testcontainers</groupId>-->
-<!--                <artifactId>postgresql</artifactId>-->
-<!--                <version>${version.testcontainers}</version>-->
-<!--                <scope>test</scope>-->
-<!--            </dependency>-->
-
-<!--            <dependency>-->
-<!--                <groupId>org.mapstruct</groupId>-->
-<!--                <artifactId>mapstruct-processor</artifactId>-->
-<!--                <version>${version.mapstruct}</version>-->
-<!--            </dependency>-->
 
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -337,28 +273,6 @@
                 <artifactId>guava</artifactId>
                 <version>${version.google.guava}</version>
             </dependency>
-
-<!--            &lt;!&ndash; Flyway: https://flywaydb.org/documentation/usage/api/ &ndash;&gt;-->
-<!--            <dependency>-->
-<!--                <groupId>org.flywaydb</groupId>-->
-<!--                <artifactId>flyway-core</artifactId>-->
-<!--                <version>${version.flyway}</version>-->
-<!--            </dependency>-->
-
-<!--            &lt;!&ndash; https://mvnrepository.com/artifact/org.postgresql/postgresql &ndash;&gt;-->
-<!--            <dependency>-->
-<!--                <groupId>org.postgresql</groupId>-->
-<!--                <artifactId>postgresql</artifactId>-->
-<!--                <version>${version.db.postgresql}</version>-->
-<!--                <scope>test</scope>-->
-<!--            </dependency>-->
-
-<!--            <dependency>-->
-<!--                <groupId>com.h2database</groupId>-->
-<!--                <artifactId>h2</artifactId>-->
-<!--                <version>${version.db.h2}</version>-->
-<!--                <scope>test</scope>-->
-<!--            </dependency>-->
 
             <dependency>
                 <groupId>org.javers</groupId>
@@ -592,205 +506,6 @@
     </build>
 
     <profiles>
-
-<!--        <profile>-->
-<!--            &lt;!&ndash; Note: This profile is used for the development of the solution using a H2 database &ndash;&gt;-->
-<!--            <id>cherry.h2.dev</id>-->
-<!--            <properties>-->
-<!--                <server.port>8084</server.port>-->
-<!--                <database.port>9092</database.port>-->
-<!--                <database.name>HEMAJOO</database.name>-->
-<!--                <database.schema>DEV</database.schema>-->
-<!--                <spring.datasource.url>jdbc:h2:tcp://localhost:${database.port}/${database.name};DB_CLOSE_ON_EXIT=TRUE</spring.datasource.url>-->
-<!--                <spring.datasource.username>sa</spring.datasource.username>-->
-<!--                <spring.datasource.password>password</spring.datasource.password>-->
-<!--                <spring.jpa.hibernate.database-platform>org.hibernate.dialect.PostgresPlusDialect</spring.jpa.hibernate.database-platform>-->
-<!--                <spring.jpa.hibernate.ddl-auto>update</spring.jpa.hibernate.ddl-auto>-->
-<!--                <spring.jpa.hibernate.show-sql>false</spring.jpa.hibernate.show-sql>-->
-<!--                <spring.jpa.hibernate.properties.javax.persistence.validation.mode>none</spring.jpa.hibernate.properties.javax.persistence.validation.mode>-->
-<!--                <spring.jpa.generate-ddl>true</spring.jpa.generate-ddl>-->
-<!--                <spring.jpa.hibernate.ddl-auto>update</spring.jpa.hibernate.ddl-auto>-->
-<!--                <spring.batch.initialize-schema>always</spring.batch.initialize-schema>-->
-<!--                <hemajoo.commerce.cherry.store.location>./target/content-store</hemajoo.commerce.cherry.store.location>-->
-<!--            </properties>-->
-<!--            <dependencies>-->
-<!--                <dependency>-->
-<!--                    <groupId>com.h2database</groupId>-->
-<!--                    <artifactId>h2</artifactId>-->
-<!--                    <version>${version.db.h2}</version>-->
-<!--                    <scope>runtime</scope>-->
-<!--                </dependency>-->
-<!--            </dependencies>-->
-<!--            <build>-->
-<!--                <plugins>-->
-<!--                    <plugin>-->
-<!--                        <groupId>org.flywaydb</groupId>-->
-<!--                        <artifactId>flyway-maven-plugin</artifactId>-->
-<!--                        <version>${version.maven.plugin.flyway}</version>-->
-<!--                        <configuration>-->
-<!--                            <url>${spring.datasource.url}</url>-->
-<!--                            <user>${spring.datasource.username}</user>-->
-<!--                            <password>${spring.datasource.password}</password>-->
-<!--                            <schemas>-->
-<!--                                <schema>${database.schema}</schema>-->
-<!--                            </schemas>-->
-<!--                            <locations>${flyway.locations}</locations>-->
-<!--                        </configuration>-->
-<!--                    </plugin>-->
-<!--                </plugins>-->
-<!--            </build>-->
-<!--        </profile>-->
-
-<!--        <profile>-->
-<!--            &lt;!&ndash; Note: This profile is used for the development of the solution using a PostgresSQL database &ndash;&gt;-->
-<!--            <id>cherry.postgres.dev</id>-->
-<!--            <activation>-->
-<!--                <activeByDefault>true</activeByDefault>-->
-<!--            </activation>-->
-<!--            <properties>-->
-<!--                <server.port>8094</server.port>-->
-<!--                <database.port>5432</database.port>-->
-<!--                <database.name>cherry</database.name>-->
-<!--                <database.schema>dev</database.schema>-->
-<!--                <spring.datasource.url>jdbc:postgresql://localhost:${database.port}/${database.name}</spring.datasource.url>-->
-<!--                <spring.datasource.username>postgres</spring.datasource.username>-->
-<!--                <spring.datasource.password>postgres</spring.datasource.password>-->
-<!--                <spring.jpa.hibernate.ddl-auto>update</spring.jpa.hibernate.ddl-auto>-->
-<!--                <spring.jpa.hibernate.show-sql>false</spring.jpa.hibernate.show-sql>-->
-<!--                <spring.jpa.hibernate.properties.javax.persistence.validation.mode>none</spring.jpa.hibernate.properties.javax.persistence.validation.mode>-->
-<!--                <spring.jpa.generate-ddl>true</spring.jpa.generate-ddl>-->
-<!--                <spring.jpa.hibernate.ddl-auto>update</spring.jpa.hibernate.ddl-auto>-->
-<!--                <spring.batch.initialize-schema>always</spring.batch.initialize-schema>-->
-<!--                <hemajoo.commerce.cherry.store.location>./target/content-store</hemajoo.commerce.cherry.store.location>-->
-<!--            </properties>-->
-<!--            <dependencies>-->
-<!--                <dependency>-->
-<!--                    <groupId>org.postgresql</groupId>-->
-<!--                    <artifactId>postgresql</artifactId>-->
-<!--                    <version>${version.db.postgresql}</version>-->
-<!--                    <scope>runtime</scope>-->
-<!--                </dependency>-->
-<!--            </dependencies>-->
-<!--            <build>-->
-<!--                <plugins>-->
-<!--                    <plugin>-->
-<!--                        <groupId>org.flywaydb</groupId>-->
-<!--                        <artifactId>flyway-maven-plugin</artifactId>-->
-<!--                        <version>${version.maven.plugin.flyway}</version>-->
-<!--                        <configuration>-->
-<!--                            <url>${spring.datasource.url}</url>-->
-<!--                            <user>${spring.datasource.username}</user>-->
-<!--                            <password>${spring.datasource.password}</password>-->
-<!--                            <schemas>-->
-<!--                                <schema>${database.schema}</schema>-->
-<!--                            </schemas>-->
-<!--                            <locations>${flyway.locations}</locations>-->
-<!--                        </configuration>-->
-<!--                        &lt;!&ndash;                        <executions>&ndash;&gt;-->
-<!--                        &lt;!&ndash;                            <execution>&ndash;&gt;-->
-<!--                        &lt;!&ndash;                                <id>flyway-check-db</id>&ndash;&gt;-->
-<!--                        &lt;!&ndash;                                <phase>compile</phase>&ndash;&gt;-->
-<!--                        &lt;!&ndash;                                <goals>&ndash;&gt;-->
-<!--                        &lt;!&ndash;                                    <goal>info</goal>&ndash;&gt;-->
-<!--                        &lt;!&ndash;                                </goals>&ndash;&gt;-->
-<!--                        &lt;!&ndash;                            </execution>&ndash;&gt;-->
-<!--                        &lt;!&ndash;                        </executions>&ndash;&gt;-->
-<!--                    </plugin>-->
-<!--                </plugins>-->
-<!--            </build>-->
-<!--        </profile>-->
-
-<!--        <profile>-->
-<!--            &lt;!&ndash; Note: This profile is used for the user acceptance tests of the cherry solution using a PostgreSQL database &ndash;&gt;-->
-<!--            <id>cherry.postgres.uat</id>-->
-<!--            <properties>-->
-<!--                <database.port>5432</database.port>-->
-<!--                <database.name>cherry</database.name>-->
-<!--                <database.schema>uat</database.schema>-->
-<!--                <spring.datasource.url>jdbc:postgresql://localhost:${database.port}/${database.name}</spring.datasource.url>-->
-<!--                <spring.datasource.username>postgres</spring.datasource.username>-->
-<!--                <spring.datasource.password>postgres</spring.datasource.password>-->
-<!--                <spring.jpa.hibernate.ddl-auto>update</spring.jpa.hibernate.ddl-auto>-->
-<!--                <spring.jpa.hibernate.show-sql>false</spring.jpa.hibernate.show-sql>-->
-<!--                <spring.jpa.hibernate.properties.javax.persistence.validation.mode>none</spring.jpa.hibernate.properties.javax.persistence.validation.mode>-->
-<!--                <spring.jpa.generate-ddl>true</spring.jpa.generate-ddl>-->
-<!--                <spring.jpa.hibernate.ddl-auto>update</spring.jpa.hibernate.ddl-auto>-->
-<!--                <spring.batch.initialize-schema>always</spring.batch.initialize-schema>-->
-<!--                <hemajoo.commerce.cherry.store.location>./target/content-store</hemajoo.commerce.cherry.store.location>-->
-<!--            </properties>-->
-<!--            <dependencies>-->
-<!--                <dependency>-->
-<!--                    <groupId>org.postgresql</groupId>-->
-<!--                    <artifactId>postgresql</artifactId>-->
-<!--                    <version>${version.db.postgresql}</version>-->
-<!--                    <scope>runtime</scope>-->
-<!--                </dependency>-->
-<!--            </dependencies>-->
-<!--            <build>-->
-<!--                <plugins>-->
-<!--                    <plugin>-->
-<!--                        <groupId>org.flywaydb</groupId>-->
-<!--                        <artifactId>flyway-maven-plugin</artifactId>-->
-<!--                        <version>${version.maven.plugin.flyway}</version>-->
-<!--                        <configuration>-->
-<!--                            <url>${spring.datasource.url}</url>-->
-<!--                            <user>${spring.datasource.username}</user>-->
-<!--                            <password>${spring.datasource.password}</password>-->
-<!--                            <schemas>-->
-<!--                                <schema>${database.schema}</schema>-->
-<!--                            </schemas>-->
-<!--                            <locations>${flyway.locations}</locations>-->
-<!--                        </configuration>-->
-<!--                    </plugin>-->
-<!--                </plugins>-->
-<!--            </build>-->
-<!--        </profile>-->
-
-<!--        <profile>-->
-<!--            &lt;!&ndash; Note: This profile is used for the production of the cherry solution using a PostgreSQL database &ndash;&gt;-->
-<!--            <id>cherry.postgres.prod</id>-->
-<!--            <properties>-->
-<!--                <spring.datasource.url>jdbc:postgresql://localhost:${database.port}/${database.name}</spring.datasource.url>-->
-<!--                <database.port>5432</database.port>-->
-<!--                <spring.datasource.username>postgres</spring.datasource.username>-->
-<!--                <spring.datasource.password>postgres</spring.datasource.password>-->
-<!--                <database.name>cherry</database.name>-->
-<!--                <database.schema>prod</database.schema>-->
-<!--                <spring.jpa.hibernate.ddl-auto>update</spring.jpa.hibernate.ddl-auto>-->
-<!--                <spring.jpa.hibernate.show-sql>false</spring.jpa.hibernate.show-sql>-->
-<!--                <spring.jpa.hibernate.properties.javax.persistence.validation.mode>none</spring.jpa.hibernate.properties.javax.persistence.validation.mode>-->
-<!--                <spring.jpa.generate-ddl>true</spring.jpa.generate-ddl>-->
-<!--                <spring.jpa.hibernate.ddl-auto>update</spring.jpa.hibernate.ddl-auto>-->
-<!--                <spring.batch.initialize-schema>always</spring.batch.initialize-schema>-->
-<!--                <hemajoo.commerce.cherry.store.location>./target/content-store</hemajoo.commerce.cherry.store.location>-->
-<!--            </properties>-->
-<!--            <dependencies>-->
-<!--                <dependency>-->
-<!--                    <groupId>org.postgresql</groupId>-->
-<!--                    <artifactId>postgresql</artifactId>-->
-<!--                    <version>${version.db.postgresql}</version>-->
-<!--                    <scope>runtime</scope>-->
-<!--                </dependency>-->
-<!--            </dependencies>-->
-<!--            <build>-->
-<!--                <plugins>-->
-<!--                    <plugin>-->
-<!--                        <groupId>org.flywaydb</groupId>-->
-<!--                        <artifactId>flyway-maven-plugin</artifactId>-->
-<!--                        <version>${version.maven.plugin.flyway}</version>-->
-<!--                        <configuration>-->
-<!--                            <url>${spring.datasource.url}</url>-->
-<!--                            <user>${spring.datasource.username}</user>-->
-<!--                            <password>${spring.datasource.password}</password>-->
-<!--                            <schemas>-->
-<!--                                <schema>${database.schema}</schema>-->
-<!--                            </schemas>-->
-<!--                            <locations>${flyway.locations}</locations>-->
-<!--                        </configuration>-->
-<!--                    </plugin>-->
-<!--                </plugins>-->
-<!--            </build>-->
-<!--        </profile>-->
 
         <profile>
             <id>java.8</id>
