--- a/cherry-data-model/pom.xml
+++ b/cherry-data-model/pom.xml
@@ -56,6 +56,11 @@
         </dependency>
 
         <dependency>
+            <groupId>dev.fuxing</groupId>
+            <artifactId>hibernate-validator-enum</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
