--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,6 +114,7 @@ jobs:
         uses: sonarsource/sonarqube-scan-action@master
         with:
           args: >
+            -Dsonar.organization=hemajoo-commerce
             -Dsonar.projectKey=com.hemajoo.commerce:cherry-base
             -Dsonar.java.binaries=target/classes
             -Dsonar.exclusions=**/target/site/**/*,**/apidocs/**/*
