--- a/cherry-base-coverage/pom.xml
+++ b/cherry-base-coverage/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.hemajoo.commerce</groupId>
         <artifactId>cherry-base</artifactId>
-        <version>0.1.0</version>
+        <version>0.2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>cherry-base-coverage</artifactId>
