--- a/cherry-base-commons/pom.xml
+++ b/cherry-base-commons/pom.xml
@@ -99,6 +99,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.ressec.avocado</groupId>
             <artifactId>avocado-core</artifactId>
             <version>${version.ressec.avocado}</version>
