--- a/cherry-data-model/src/main/resources/ValidationMessages.properties
+++ b/cherry-data-model/src/main/resources/ValidationMessages.properties
@@ -13,8 +13,10 @@
 # -----------------------------------------------------------------------------------------------
 #
 
-javax.validation.constraints.ValidEnum.message = enum cannot be null
+javax.validation.constraints.ValidEnum.message  = enum cannot be null!
+javax.validation.constraints.NotNull.message    = cannot be null!
+javax.validation.constraints.NotEmpty.message   = cannot be empty!
+javax.validation.constraints.NotBlank.message   = cannot be blank!
+javax.validation.constraints.Email.message      = with value: '${validatedValue}' must be a well-formed email address!
 
-javax.validation.constraints.NotNull.message = value cannot be null
-javax.validation.constraints.NotBlank.message = value cannot be blank
-
+com.hemajoo.constraints.validation.EnumValue.message = has an invalid enumerated value: '{invalidValue}' for enumeration: '{enumClassName}'. Valid values are: [{validValues}]
