chore(test): Adding a validator for the enumerations (@EnumValue).

--- a/cherry-data-model/src/main/resources/ValidationMessages.properties
+++ b/cherry-data-model/src/main/resources/ValidationMessages.properties
@@ -19,4 +19,5 @@ javax.validation.constraints.NotEmpty.message   = cannot be empty!
 javax.validation.constraints.NotBlank.message   = cannot be blank!
 javax.validation.constraints.Email.message      = with value: '${validatedValue}' must be a well-formed email address!
 
-com.hemajoo.constraints.validation.EnumValue.message = has an invalid enumerated value: '{invalidValue}' for enumeration: '{enumClassName}'. Valid values are: [{validValues}]
+com.hemajoo.constraints.validation.EnumValueExcluded.message = has an invalid enumerated value: '{invalidValue}' for enumeration: '{enumClassName}'. Valid values are: {validValues}
+com.hemajoo.constraints.validation.EnumNotNull.message = cannot have a null value for enumeration: '{enumClassName}'. Valid values are: {validValues}
