--- a/pom.xml
+++ b/pom.xml
@@ -435,6 +435,12 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${version.plugin.maven.jacoco}</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/*.class</exclude>
+                        <exclude>**/media/*</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <id>prepare</id>
