--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,7 +118,7 @@ jobs:
             -Dsonar.projectKey=com.hemajoo.commerce:cherry-base
             -Dsonar.java.binaries=**/target/classes
             -Dsonar.exclusions=**/target/site/**/*,**/target/classes/media/**/*,**/apidocs/**/*,**/test/resources/**/*,**/test-classes/media/**/*
-            -Dsonar.coverage.exclusions=**/test/java/**/*
+#            -Dsonar.coverage.exclusions=**/test/java/**/*
             -Dsonar.coverage.jacoco.xmlReportPaths=./cherry-base-coverage/target/site/jacoco-aggregate/jacoco.xml
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
