--- a/cherry-base-coverage/pom.xml
+++ b/cherry-base-coverage/pom.xml
@@ -8,9 +8,11 @@
         <groupId>com.hemajoo.commerce</groupId>
         <artifactId>cherry-base</artifactId>
         <version>0.2.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>cherry-base-coverage</artifactId>
+    <packaging>pom</packaging>
 
     <name>Cherry Base - Code Coverage</name>
     <description>Hemajoo's Commerce - Cherry module containing other modules code coverage reports and metrics.</description>
@@ -36,5 +38,40 @@
         </dependency>
 
     </dependencies>
+
+<!--    <build>-->
+
+<!--        <plugins>-->
+
+<!--            &lt;!&ndash; JACOCO: Java Code Coverage. &ndash;&gt;-->
+<!--            <plugin>-->
+<!--                <groupId>org.jacoco</groupId>-->
+<!--                <artifactId>jacoco-maven-plugin</artifactId>-->
+<!--                <version>${version.plugin.maven.jacoco}</version>-->
+<!--                <configuration>-->
+<!--                    <excludes>-->
+<!--                        <exclude>**/media/*</exclude>-->
+<!--                    </excludes>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>prepare</id>-->
+<!--                        <goals>-->
+<!--                            <goal>prepare-agent</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                    <execution>-->
+<!--                        <id>report</id>-->
+<!--                        <phase>verify</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>report-aggregate</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
+
+<!--        </plugins>-->
+
+<!--    </build>-->
 
 </project>
