--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,7 +116,7 @@ jobs:
           args: >
             -Dsonar.organization=hemajoo-commerce
             -Dsonar.projectKey=com.hemajoo.commerce:cherry-base
-            -Dsonar.java.binaries=**/target/classes
+            -Dsonar.java.binaries=lib/**/*.jar
             -Dsonar.exclusions=**/target/site/**/*,**/target/classes/media/**/*,**/apidocs/**/*,**/test/resources/**/*,**/test-classes/media/**/*
             -Dsonar.coverage.exclusions=**/test/java/**/*
             -Dsonar.coverage.jacoco.xmlReportPaths=./cherry-base-coverage/target/site/jacoco-aggregate/jacoco.xml
