--- a/cherry-base-utilities/pom.xml
+++ b/cherry-base-utilities/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.hemajoo.commerce</groupId>
         <artifactId>cherry-base</artifactId>
-        <version>0.2.0-SNAPSHOT</version>
+        <version>0.2.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.hemajoo.commerce</groupId>
             <artifactId>cherry-base-commons</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
+            <version>0.2.0</version>
         </dependency>
 
     </dependencies>
