feat(i18n): Implementing the localization and translation entities.

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>cherry-base-utilities</module>
         <module>cherry-data-model</module>
         <module>cherry-base-coverage</module>
+        <module>cherry-base-i18n</module>
     </modules>
 
     <properties>
