--- a/cherry-base-i18n/pom.xml
+++ b/cherry-base-i18n/pom.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.hemajoo.commerce</groupId>
         <artifactId>cherry-base</artifactId>
+        <groupId>com.hemajoo.commerce</groupId>
         <version>0.3.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>cherry-base-utilities</artifactId>
+    <artifactId>cherry-base-i18n</artifactId>
 
-    <name>Cherry Base Utilities</name>
-    <description>Hemajoo's Commerce - Cherry module containing utilities.</description>
+    <name>Cherry Base I18n</name>
+    <description>Hemajoo's Commerce - Cherry module containing localization and translation features.</description>
 
     <properties>
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../cherry-base-coverage/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
@@ -24,8 +25,20 @@
 
         <dependency>
             <groupId>com.hemajoo.commerce</groupId>
-            <artifactId>cherry-base-commons</artifactId>
+            <artifactId>cherry-base-utilities</artifactId>
             <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
         </dependency>
 
     </dependencies>
