--- a/cherry-data-model/pom.xml
+++ b/cherry-data-model/pom.xml
@@ -24,8 +24,8 @@
 
         <dependency>
             <groupId>com.hemajoo.commerce</groupId>
-            <artifactId>cherry-base-utilities</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <artifactId>cherry-base-i18n</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
