--- a/cherry-base-i18n/src/main/resources/application.properties
+++ b/cherry-base-i18n/src/main/resources/application.properties
@@ -21,4 +21,4 @@ logging.level.root = info
 logging.level.org.apache.http = warn
 logging.level.org.javers.core.JaversBuilder = warn
 
-logging.level.com.hemajoo.commerce.cherry.base.i18n = info
+logging.level.com.hemajoo.commerce.cherry.base.i18n = debug
