--- a/cherry-base-utilities/pom.xml
+++ b/cherry-base-utilities/pom.xml
@@ -28,6 +28,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.gsonfire</groupId>
+            <artifactId>gson-fire</artifactId>
+            <version>1.9.0-alpha2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
