feat(i18n): Implementing the translation entities.

--- a/cherry-base-commons/pom.xml
+++ b/cherry-base-commons/pom.xml
@@ -53,6 +53,22 @@
             </exclusions>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter</artifactId>-->
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.springframework.boot</groupId>-->
+<!--                    <artifactId>spring-boot-starter-logging</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-log4j2</artifactId>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
@@ -95,7 +111,6 @@
         <dependency>
             <groupId>com.github.lafa.tikaNoExternal</groupId>
             <artifactId>tika-core</artifactId>
-            <version>${version.apache.tika}</version>
         </dependency>
 
         <dependency>
