--- a/cherry-base-i18n/src/main/resources/application.properties
+++ b/cherry-base-i18n/src/main/resources/application.properties
@@ -16,7 +16,7 @@
 #
 # Logging
 #
-logging.level.root = info
+logging.level.root = warn
 
 logging.level.org.apache.http = warn
 logging.level.org.javers.core.JaversBuilder = warn
