--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
         <test.pattern.integration>**/*IntegrationTest.java</test.pattern.integration>
 
         <!-- Spring overriding properties -->
-        <log4j2.version>2.17.1</log4j2.version> <!-- Forces Spring to use log4j2 version 2.17.1 -->
+        <log4j2.version>2.18.0</log4j2.version> <!-- Forces Spring to use this version of log4j2 -->
         <junit-jupiter.version>5.8.2</junit-jupiter.version>
 
         <!-- Maven plugins version properties. Last update on 2022/03/13 -->
@@ -169,13 +169,13 @@
 
         <dependencies>
 
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-bom</artifactId>
-                <version>${log4j2.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.apache.logging.log4j</groupId>-->
+<!--                <artifactId>log4j-bom</artifactId>-->
+<!--                <version>${log4j2.version}</version>-->
+<!--                <type>pom</type>-->
+<!--                <scope>import</scope>-->
+<!--            </dependency>-->
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -185,11 +185,23 @@
                 <scope>import</scope>
             </dependency>
 
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter</artifactId>
-                <version>${version.spring.boot}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-starter</artifactId>-->
+<!--                <version>${version.spring.boot}</version>-->
+<!--                <exclusions>-->
+<!--                    <exclusion>-->
+<!--                        <groupId>org.springframework.boot</groupId>-->
+<!--                        <artifactId>spring-boot-starter-logging</artifactId>-->
+<!--                    </exclusion>-->
+<!--                </exclusions>-->
+<!--            </dependency>-->
+
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-starter-log4j2</artifactId>-->
+<!--                <version>${version.spring.boot}</version>-->
+<!--            </dependency>-->
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
