chore(test): Adding dependencies (.jar) for Sonar analysis to avoid false positives.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,7 +117,7 @@ jobs:
             -Dsonar.organization=hemajoo-commerce
             -Dsonar.projectKey=com.hemajoo.commerce:cherry-base
             -Dsonar.java.binaries=**/target/classes
-            -Dsonar.java.libraries=**/target/*.jar
+            -Dsonar.java.libraries=**/target/dependency/*.jar
             -Dsonar.exclusions=**/target/site/**/*,**/target/classes/media/**/*,**/apidocs/**/*,**/test/resources/**/*,**/test-classes/media/**/*
             -Dsonar.coverage.exclusions=**/test/java/**/*
             -Dsonar.coverage.jacoco.xmlReportPaths=./cherry-base-coverage/target/site/jacoco-aggregate/jacoco.xml
