--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,7 +104,7 @@ jobs:
             }]
 
       - name: Analyze with SonarCloud
-        run: mvn -B verify sonar:sonar -f pom.xml -Pjava.17
+        run: mvn -B dependency:copy-dependencies verify sonar:sonar -f pom.xml -Pjava.17
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
