--- a/cherry-base-utilities/pom.xml
+++ b/cherry-base-utilities/pom.xml
@@ -44,6 +44,17 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.imgscalr</groupId>
+            <artifactId>imgscalr-lib</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.twelvemonkeys.imageio</groupId>
+            <artifactId>imageio</artifactId>
+            <type>pom</type>
+        </dependency>
+
     </dependencies>
 
 </project>
