chore(maven): Updating modules name.

--- a/cherry-base-commons/pom.xml
+++ b/cherry-base-commons/pom.xml
@@ -13,7 +13,7 @@
 
     <artifactId>cherry-base-commons</artifactId>
 
-    <name>Cherry Base Commons</name>
+    <name>Cherry Base - Commons</name>
     <description>Hemajoo's Commerce - Cherry module containing common entities.</description>
 
     <properties>
