--- a/cherry-base-utilities/pom.xml
+++ b/cherry-base-utilities/pom.xml
@@ -13,7 +13,7 @@
 
     <artifactId>cherry-base-utilities</artifactId>
 
-    <name>Cherry Base Utilities</name>
+    <name>Cherry Base - Utilities</name>
     <description>Hemajoo's Commerce - Cherry module containing utilities.</description>
 
     <properties>
