chore(tests): Fixing issues on unit tests

--- a/pom.xml
+++ b/pom.xml
@@ -102,8 +102,8 @@
         <version.amazon.awssdk>2.17.100</version.amazon.awssdk>
         <version.hibernate.validator>7.0.4.Final</version.hibernate.validator>
         <version.jakarta.el>4.0.1</version.jakarta.el>
-        <version.imageio>3.8.2</version.imageio>
-        <version.imgscalr>4.2</version.imgscalr>
+        <version.imageio>3.8.3</version.imageio>
+        <version.imagej>1.53t</version.imagej>
 
         <!-- Flyway properties -->
         <flyway.locations>classpath:/db/migration/h2</flyway.locations>
@@ -282,16 +282,16 @@
             </dependency>
 
             <dependency>
-                <groupId>org.imgscalr</groupId>
-                <artifactId>imgscalr-lib</artifactId>
-                <version>${version.imgscalr}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>com.twelvemonkeys.imageio</groupId>
                 <artifactId>imageio</artifactId>
                 <version>${version.imageio}</version>
                 <type>pom</type>
+            </dependency>
+
+            <dependency>
+                <groupId>net.imagej</groupId>
+                <artifactId>ij</artifactId>
+                <version>${version.imagej}</version>
             </dependency>
 
         </dependencies>
