--- a/cherry-base-utilities/pom.xml
+++ b/cherry-base-utilities/pom.xml
@@ -45,14 +45,14 @@
         </dependency>
 
         <dependency>
-            <groupId>org.imgscalr</groupId>
-            <artifactId>imgscalr-lib</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>com.twelvemonkeys.imageio</groupId>
             <artifactId>imageio</artifactId>
             <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>net.imagej</groupId>
+            <artifactId>ij</artifactId>
         </dependency>
 
     </dependencies>
