--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,7 +116,7 @@ jobs:
           args: >
             -Dsonar.organization=hemajoo-commerce
             -Dsonar.projectKey=com.hemajoo.commerce:cherry-base
-            -Dsonar.java.binaries=**/target/classes
+            -Dsonar.java.binaries=**/target/classes/**/*
             -Dsonar.java.libraries=**/target/dependency/*.jar
             -Dsonar.exclusions==**/resources/media/**/*,**/target/site/**/*,**/target/classes/media/**/*,**/apidocs/**/*,**/test/resources/**/*.jar,**/test-classes/media/**/*
             -Dsonar.coverage.exclusions=**/test/java/**/*
