--- a/pom.xml
+++ b/pom.xml
@@ -199,9 +199,30 @@
                 <optional>true</optional>
             </dependency>
 
+            <!-- Spring Content Store: REST -->
             <dependency>
                 <groupId>com.github.paulcwarren</groupId>
                 <artifactId>spring-content-rest-boot-starter</artifactId>
+                <version>${version.spring.content}</version>
+            </dependency>
+
+            <!-- Spring Content Store: File System -->
+            <dependency>
+                <groupId>com.github.paulcwarren</groupId>
+                <artifactId>spring-content-fs-boot-starter</artifactId>
+                <version>${version.spring.content}</version>
+            </dependency>
+
+            <!-- Spring Content Store: Amazon S3 -->
+            <dependency>
+                <groupId>com.github.paulcwarren</groupId>
+                <artifactId>content-s3-spring-boot-starter</artifactId>
+                <version>${version.spring.content}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.paulcwarren</groupId>
+                <artifactId>spring-content-s3</artifactId>
                 <version>${version.spring.content}</version>
             </dependency>
 
